# robot-harness-gen-env

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements-demo.txt  requirements-scene-gen.txt  requirements-vlm.txt
.github/workflows/: ci.yml
demo/: __init__.py  app.py
demo/static/: app.js  index.html  styles.css
docs/evidence/: physics-acceptance-20260717.md  prompt-matrix-20260719.md  prompt-matrix-runtime-20260719.json
scene_gen/: __init__.py  acceptance.py  asset_generator.py  asset_overrides.yml  builder.py  catalog.py  colors.py  grounding.py  parser.py  rendered_critic.py  runtime_sampling.py  schema.py  solver.py  support_geometry.py  validator.py
scene_gen/envs/: __init__.py  generated_scene.py
scene_gen/prompts/: parse_scene.md
script/: build_stage5_report.py  generate_scene.py  run_100_seed_acceptance.py  run_prompt_matrix.py  run_rendered_critic.py  run_scene_runtime.py
tests/demo/: test_app.py
tests/fixtures/: asset_catalog.json  golden_prompts.json  prompt_matrix.json
tests/scene_gen/: test_acceptance.py  test_acceptance_runner.py  test_asset_generator.py  test_builder_validator.py  test_catalog.py  test_generated_scene.py  test_grounding.py  test_parser.py  test_prompt_matrix.py  test_rendered_critic.py  test_schema.py  test_solver.py
