[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-harness-gen-env"
version = "0.1.0"
description = "Deterministic text-to-RoboTwin scene compilation and physical validation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "LV Robotics Lab"}]
dependencies = [
  "pydantic>=2.9,<3",
  "PyYAML>=6,<7",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
demo = ["Flask>=3.0,<4"]
vlm = [
  "accelerate>=1.2,<2",
  "qwen-vl-utils>=0.0.8,<0.1",
  "transformers>=4.49,<5",
]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
include = ["scene_gen*", "demo*"]

[tool.setuptools.package-data]
scene_gen = ["asset_overrides.yml", "prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
